<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Package -->
    <string name="app_version_url">https://www.wa2c.com/documents/dokuwiki/doku.php?id=en:medoly_last.fm_plugin:history</string>
    <string name="app_description">Add functions to Medoly  such as Scrobble, Love, Unlove, Site Access, etc for Last.fm.</string>
    <string name="label_event_scrobble">Scrobble</string>
    <string name="label_event_now_playing">Now Playing</string>
    <string name="label_execute_love">Love</string>
    <string name="label_execute_unlove">Unlove</string>
    <string name="label_execute_ban">Ban</string>
    <string name="label_execute_unban">Unban</string>
    <string name="label_execute_page_track">Track Page</string>
    <string name="label_execute_page_artist">Artist Page</string>
    <string name="label_execute_site">Last.fm</string>
    <string name="label_execute_get_property">Get Properties</string>
    <string name="label_execute_get_album_art">Get Album Art</string>
    <!-- Extra Data -->
    <string name="label_property_title">Last.fm Property</string>
    <string name="label_extra_title">Last.fm Information</string>
    <string name="label_extra_data_user_play_count">User Scrobble Count</string>
    <string name="label_extra_data_play_count">Total Scrobble Count</string>
    <string name="label_extra_data_listener_count">Listener Count</string>
    <string name="label_extra_data_lastfm_track_url">Track URL</string>



    <!-- Activity -->
    <string name="title_activity_unsent_list">Unsent List</string>
    <string name="title_activity_settings">Setting</string>


    <!-- Post -->
    <string name="message_no_media">The media is not selected.</string>
    <string name="message_post_success">\"%1$s\" was scrobbled to Last.fm.</string>
    <string name="message_post_failure">Failed to scrobble to Last.fm.</string>
    <string name="message_love_success">\"%1$s\" was added to love tracks.</string>
    <string name="message_love_failure">Failed to add to love tracks.</string>
    <string name="message_unlove_success">\"%1$s\" was removed from love tracks.</string>
    <string name="message_unlove_failure">Failed to remove from love tracks.</string>
    <string name="message_ban_success">\"%1$s\" was added to ban tracks.</string>
    <string name="message_ban_failure">Failed to add to ban tracks.</string>
    <string name="message_unban_success">\"%1$s\" was removed from ban tracks.</string>
    <string name="message_unban_failure">Failed to remove from ban tracks.</string>
    <string name="message_page_failure">Failed to open the page.</string>
    <string name="message_get_property_success">Succeeded to get the properties.</string>
    <string name="message_get_property_failure">Failed to get the properties.</string>
    <string name="message_get_album_art_success">Succeeded to get the album art.</string>
    <string name="message_get_album_art_failure">Failed to get the album art.</string>
    <string name="message_auth_success">Succeeded to authenticate Last.fm.</string>
    <string name="message_auth_failure">Failed to authenticate Last.fm.</string>



    <!-- Main Activity -->
    <string name="label_spinner_event">Event</string>
    <string name="label_spinner_event_none">Invalidate event</string>
    <string name="label_button_account_auth">Account Auth</string>
    <string name="label_button_lastfm_site">Last.fm Site</string>
    <string name="label_button_settings">Settings</string>
    <string name="label_button_launch_medoly">Launch Medoly</string>
    <string name="message_no_medoly">Please install Medoly.</string>
    <string name="message_account_auth">Last.fm account authentication completed.</string>
    <string name="message_account_not_auth">Last.fm account is not been authenticated.</string>
    <string name="message_account_clear">Last.fm account auth cleared.</string>

    <!-- Unsent List Activity -->
    <string name="label_unsent_played_time">Played time: %1$s</string>
    <string name="label_unsent_save_disabled">Not save</string>
    <string name="label_unsent_check_all">Check All</string>
    <string name="label_unsent_delete">Delete</string>
    <string name="message_dialog_unsent_delete_confirm">Delete checked data.</string>
    <string name="message_unsent_check_data">Check data.</string>
    <string name="message_unsent_delete_failure">Failed to delete data.</string>
    <string name="message_unsent_no_data">No unsent data.</string>
    <string name="title_dialog_unsent_delete_confirm">Confirm</string>

    <!-- Settings Activity -->
    <string name="settings_summary_current_value">[Current Value: %1$s]</string>
    <string name="message_unsupported_device">This device is unsupported.</string>



    <!-- Auth Dialog -->
    <string name="title_dialog_auth">Account Auth</string>
    <string name="message_dialog_auth">Please enter your authentication information.\n(At first, please register an account of Last.fm if you don\'t have it yet.)</string>
    <string name="label_dialog_auth_auth">Auth</string>
    <string name="label_dialog_auth_clear">Clear</string>
    <string name="label_dialog_auth_username">Username</string>
    <string name="label_dialog_auth_password">Password</string>

    <!-- About Dialog -->
    <string name="label_dialog_about_ver">Ver. %1$s</string>
    <string name="label_dialog_about_developer">Developer</string>
    <string name="label_dialog_about_email">Email</string>
    <string name="label_dialog_about_license">License</string>
    <string name="label_dialog_about_google_play">Google Play</string>
    <string name="label_dialog_about_link">Link</string>
    <string name="label_dialog_about_library">[Library]</string>

    <!-- Preferences -->
    <string name="title_preference_category_settings">Settings</string>
    <string name="title_preference_category_about">About</string>

    <string name="pref_title_now_playing_enabled">Notify Playing Enabled</string>
    <string name="pref_summary_now_playing_enabled">Notify playback start to Last.fm.</string>
    <string name="pref_title_scrobble_enabled">Scrobble Enabled</string>
    <string name="pref_summary_scrobble_enabled">Scrobble to Last.fm.</string>
    <string name="pref_title_previous_media_enabled">Scrobble Same Media</string>
    <string name="pref_summary_previous_media_enabled">Enable to scrobble the last time scrobbled media.</string>
    <string name="pref_title_event_get_property_operation">Property Get Event</string>
    <string name="pref_summary_event_get_property_operation">Select the event to get property data.</string>
    <string name="pref_title_event_get_album_art_operation">Album Art Get Event</string>
    <string name="pref_summary_event_get_album_art_operation">Select the event to get album art.</string>
    <string name="pref_title_unsent_max">Unsent Max</string>
    <string name="pref_summary_unsent_max">Set the max count of unsent data. Unlimited in the case of 0.</string>
    <string name="pref_title_post_success_message_show">Show Success Message</string>
    <string name="pref_summary_post_success_message_show">Show the message when send succeeded.</string>
    <string name="pref_title_post_failure_message_show">Show Failure Message</string>
    <string name="pref_summary_post_failure_message_show">Show the message when send failed. </string>

    <string name="pref_title_device_auto_start">Auto Start Manager</string>
    <string name="pref_summary_device_auto_start">Launch the device auto start manager. Some devices need change settings to launch plugin.</string>
    <string name="pref_title_privacy_policy">Privacy Policy</string>
    <string name="pref_summary_privacy_policy">Show privacy policy.</string>
    <string name="pref_title_application_details">App Info</string>
    <string name="pref_summary_application_details">Show application information.</string>
    <string name="pref_title_about">About</string>
    <string name="pref_summary_about">About</string>

    <!-- Info Preferences -->
    <string name="pref_title_info_app_version">App Version</string>
    <string name="pref_summary_info_app_version" />
    <string name="pref_title_info_author">Author</string>
    <string name="pref_summary_info_author">@string/app_author</string>
    <string name="pref_title_info_app_license">License</string>
    <string name="pref_summary_info_app_license">@string/app_license</string>
    <string name="pref_title_info_library_license">Open Source License</string>
    <string name="pref_summary_info_library_license">Show open source license.</string>
    <string name="pref_title_info_privacy_policy">Privacy Policy</string>
    <string name="pref_summary_info_privacy_policy">Show privacy policy.</string>
    <string name="pref_title_info_info_app">App Info</string>
    <string name="pref_summary_info_info_app">Open OS app info.</string>
    <string name="pref_title_info_store">Google Play</string>
    <string name="pref_summary_info_store">Open Google Play Store.</string>

    <!-- System -->
    <string name="error_app">The operation failed due to an error.</string>
    <string name="error_dialog_dismissed">Open the dialog again.</string>

    <!-- List -->
    <string name="label_plugin_operation_disabled">Disable</string>

</resources>
