<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wa2c.android.medoly.plugin.action.lastfm.activity.MainActivity"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/accountAuthButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/label_button_account_auth"
                android:drawableLeft="@drawable/ic_account"
                android:drawableStart="@drawable/ic_account" />

            <Button
                android:id="@+id/unsentListButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/title_activity_unsent_list"
                android:drawableLeft="@drawable/ic_list"
                android:drawableStart="@drawable/ic_list" />

            <Button
                android:id="@+id/settingsButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/label_button_settings"
                android:drawableLeft="@drawable/ic_settings"
                android:drawableStart="@drawable/ic_settings"/>

            <Button
                android:id="@+id/lastfmSiteButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/label_button_lastfm_site"
                android:drawableLeft="@drawable/ic_lastfm"
                android:drawableStart="@drawable/ic_lastfm"/>

            <Button
                android:id="@+id/launchMedolyButton"
                android:layout_width="@dimen/main_button_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/label_button_launch_medoly" />

            <TextView
                android:id="@+id/accountAuthTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/main_button_margin"
                android:text="@string/message_account_auth"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>



