<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wa2c.android.medoly.plugin.action.lastfm.activity.UnsentListActivity">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unsentListView"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/message_unsent_no_data"
        android:id="@+id/unsentNoDataTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/linearLayout"
        android:gravity="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:id="@+id/linearLayout"
        android:layout_alignParentRight="false"
        android:gravity="center">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_unsent_save_disabled"
            android:id="@+id/unsentNotSaveCheckBox"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_unsent_check_all"
            android:id="@+id/unsentCheckAllButton" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/label_unsent_delete"
            android:id="@+id/unsentDeleteButton" />
    </LinearLayout>
</RelativeLayout>
